Fixing items + adding hint
Removing the items which have no quality but should have quality.
Adding 1 item
Adding images of 2 items
Fixing name + description in localisation
Added a note in the inventory section about item qualities

--- a/data/html/index.html
+++ b/data/html/index.html
@@ -164,7 +164,10 @@
         </div>
     </form>
 </div>
-<div class="intro lesspadding">Inventory:</div>
+<div class="intro lesspadding">Inventory:
+<br>
+<div class="note">[Note: Only use qualities on items which have them and don't set no quality on items which have qualities, otherwise that will cause issues within the game.]</div>
+</div>
 <div class="row">
     <form class="s10 col offset-s1 editsavedata">
         <div class="row">
