Improved settings menu + prevent port issue
Settings now can be accessed from within the program so you don't have to delete the settings file.
You can now configure a port the application uses. Additional by default now any free port is used (So no more conflicting ports).
It now warns you if you forgot to enter the path to the save files - many users made this mistake (by simply not filling it out).
Additionally the application won't close anymore if an error is thrown when initialising the GUI - making it easier for users to report the errors.

--- a/data/html/loadsavefile.html
+++ b/data/html/loadsavefile.html
@@ -19,7 +19,7 @@
     <header></header>
     <main>
         <div class="con">
-            <div 1 class="intro">
+            <div class="intro">
                 <h3>Following save files are available:</h3>
             </div>
             <div class="consaves">
@@ -39,7 +39,7 @@
                     </div>
                 </div>
             </div>
-            <div 1 class="intro">
+            <div class="intro">
                 <h3>My thanks for the following stuff:</h3>
             </div>
             <div class="thankscon">
@@ -64,7 +64,7 @@
                     </li>
                 </ul>
             </div>
-            <div 1 class="intro">
+            <div class="intro">
                 <h3>Notes:</h3>
             </div>
             <div class="thankscon">
@@ -98,6 +98,14 @@
                         <a href="https://github.com/NetroScript/Graveyard-Keeper-Savefile-Editor" target="_blank">Github Page</a>.
                     </li>
                 </ul>
+            </div>
+            <div class="intro">
+                <h3>Miscellaneous:</h3>
+            </div>
+            <div class="thankscon misc">
+<a target="_blank" href="/no settings.html#WithinApplication" onclick='window.open("/no settings.html#WithinApplication", "_blank", "location=yes,height=1000,width=800,scrollbars=yes,status=yes,dependant=true"); return false;'><div class="saveslot extra">
+                    <div>Open settings again.</div>
+                </div></a>
             </div>
         </div>
         </div>
