--- a/data/html/no settings.html
+++ b/data/html/no settings.html
@@ -28,9 +28,10 @@
                     <form class="col s12">
                         <div class="row">
                             <div class="input-field col s12">
-                                <input placeholder="Save folder (Commonly in Appdata-LocalLow-Lazy Bear Games-Graveyard Keeper)" id="path" type="text" class="validate">
+                                <input placeholder="Save folder (Commonly in Appdata-LocalLow-Lazy Bear Games-Graveyard Keeper)" id="path" type="text" class="validate invalid">
                                 <label for="path">Folder Path</label>
                                 <a class="waves-effect waves-light btn col s2 offset-s5" id="requestfile">Open</a>
+                                <span class="helper-text" data-error="Please enter the path" data-success=""></span>
                             </div>
                         </div>
                         <div class="row">
@@ -42,6 +43,13 @@
                                     <span class="lever"></span>
                                     Enabled
                                 </label>
+                            </div>
+                        </div>
+                        <div class="row port">
+                            <div class="input-field col s12">
+                                <input placeholder="" value="0" id="port" type="number" class="validate valid" min="0" max="65535" step="1">
+                                <label for="port">Input a port (0 chooses a random available port) - only applied after application restart</label>
+                                <span class="helper-text" data-error="Please a correct port (0-65535)" data-success=""></span>
                             </div>
                         </div>
                     </form>
@@ -58,7 +66,15 @@
     <script>
         $(document).contextmenu(function(e){
             e.preventDefault()
-        })
+        });
+
+        $(document).ready(function(){
+            if(window.location.hash == "#WithinApplication"){
+                $("title").text("Graveyard Keeper Savefile Editor | Settings");
+                $(".intro h3").text("To apply changed settings, please restart the applications after clicking DONE.");
+                getSettings();
+            }
+        });
 
         async function getFolder() {
             f = await eel.get_folder()();
@@ -66,20 +82,39 @@
             $("#path").val(f);
         }
         async function saveSettings() {
-            await eel.set_settings($("#path").val(), ($("#updatesc").val()) == "on" ? true : false)();
-            window.location = "/loadsavefile.html";
+            await eel.set_settings($("#path").val(), $("#updatesc").prop("checked"), parseInt($("#port").val()))();
+            if(window.location.hash == "#WithinApplication"){
+                window.close()
+            } else {
+                window.location = "/loadsavefile.html";
+            }  
+        }
+
+        async function getSettings() {
+            let b = await eel.get_settings()();
+            $("#path").val(b["path"]);
+            $("#path").removeClass("invalid");
+            $("#updatesc").prop("checked", b["checkforupdate"])
+            $("#port").val(b["port"]);
         }
 
         $("#requestfile").click(function (e) {
             console.log("Loading Folder");
             e.preventDefault();
             getFolder();
-        })
+        });
 
         $("#donebtn").click(function (e) {
+            if($("#path").val().length <= 5){
+                M.toast({
+                        html: "Please fill in a path"
+                });
+                return;
+            }
             console.log("Saving Savedata");
             saveSettings();
-        })
+        });
+
     </script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
